experimental/parser/testdata/parser/package/absolute.proto.stderr.txt
error: unexpected absolute path in `package` declaration
  --> testdata/parser/package/absolute.proto:3:9
   |
 3 | package .test.test2;
   |         ^^^^^^^^^^^ expected a path without a leading `.`
   |
  help: remove the leading `.`
   |
 3 | - package .test.test2;
 3 | + package test.test2;
   |

encountered 1 error
